Shield cosmetics (#172)
* Shield cosmetics

* Cast object lists to class